--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">BrightFuture</string>
+    <string name="app_name">Bright Future</string>
     <string name="himanshu_jha">Himanshu Jha</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
     <string name="email">Email</string>
     <string name="name">Name</string>
+    <string name="NeverStopLearningBecauseLifeNeverStopTeaching">Never Stop Learning Because Life Never Stop Teaching</string>
 </resources>
